--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ resources/public/js
 .clj-kondo/.cache
 yarn-error.log
 report.html
+projectFilesBackup/.idea/*
 .idea/*
 !.idea/ClojureProjectResolveSettings.xml
 *.iml
